--- a/deploy-service/package.json
+++ b/deploy-service/package.json
@@ -11,5 +11,9 @@
   "description": "",
   "devDependencies": {
     "typescript": "^5.6.2"
+  },
+  "dependencies": {
+    "aws-sdk": "^2.1691.0",
+    "dotenv": "^16.4.5"
   }
 }
