--- a/request-handler/package.json
+++ b/request-handler/package.json
@@ -8,5 +8,10 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "description": ""
+  "description": "",
+  "dependencies": {
+    "@types/express": "^5.0.0",
+    "aws-sdk": "^2.1691.0",
+    "express": "^4.21.0"
+  }
 }
