--- a/deploy-service/package.json
+++ b/deploy-service/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "aws-sdk": "^2.1691.0",
-    "dotenv": "^16.4.5"
+    "dotenv": "^16.4.5",
+    "redis": "^4.7.0"
   }
 }
